hphp/test/zend/bad/ext/soap/tests/interop/Round4/GroupI/r4_groupI_xsd_022w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round4_groupI_xsd.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoSimpleTypesAsComplexType(array("inputInteger"=>34,
                                            "inputFloat"=>12.345));
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round4_groupI_xsd.inc");
echo "ok\n";
?>